fix searhbar align again

--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ header .container {
   padding-left: 0;
 }
 
-nav .main_nav > li {
+nav .main_nav>li {
   list-style: none;
   font-size: 24px;
   padding-left: 30px;
@@ -60,6 +60,7 @@ nav ul li a {
 .img_logo img {
   height: 90px;
 }
+
 /* dropDown */
 .jqueryDropdownList li {
   list-style: none;
@@ -99,6 +100,7 @@ nav ul li a {
 .jquerySliderContainer {
   padding-bottom: 3rem 0;
 }
+
 .jquerySliderContainer div {
   display: flex;
   justify-content: center;
@@ -132,10 +134,20 @@ header input[type="text"]:focus {
   outline: none !important;
 }
 
-header .search-icon {
+/*header .search-icon {
   color: var(--color-primary);
   background-color: white;
-  height: 30px;
+  width: 30px;
+  border-radius: 90px;
+  transform: translateX(-7px);
+  font-size: 16px;
+  text-align: center;
+  line-height: 30px;
+}*/
+
+header .searchbar a {
+  color: var(--color-primary);
+  background-color: white;
   width: 30px;
   border-radius: 90px;
   transform: translateX(-7px);
@@ -144,7 +156,7 @@ header .search-icon {
   line-height: 30px;
 }
 
-header .search-icon-active {
+header .searchbar a.search-icon-active {
   border-radius: 0 90px 90px 0;
 }
 
@@ -152,16 +164,12 @@ header .search-icon-active {
   background: var(--color-highlight) !important;
 }
 
-.ui-autocomplete
-  .ui-menu-item:first-of-type
-  .ui-menu-item-wrapper.ui-state-active {
+.ui-autocomplete .ui-menu-item:first-of-type .ui-menu-item-wrapper.ui-state-active {
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
 
-.ui-autocomplete
-  .ui-menu-item:last-of-type
-  .ui-menu-item-wrapper.ui-state-active {
+.ui-autocomplete .ui-menu-item:last-of-type .ui-menu-item-wrapper.ui-state-active {
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
 }
@@ -190,6 +198,7 @@ footer {
   flex-wrap: wrap;
   justify-content: flex-start;
 }
+
 .socialIcons a {
   padding: 10px 0;
   margin-left: 30px;
@@ -207,6 +216,7 @@ footer {
   flex-wrap: wrap;
   justify-content: space-around;
 }
+
 .nuttigeLinks a {
   padding: 20px;
 }
@@ -219,6 +229,7 @@ footer {
 .footerContactInfo ul {
   padding: 0;
 }
+
 .footerContactInfo li {
   list-style: none;
   color: white;
@@ -278,7 +289,7 @@ a.ui-button:active,
   border: none !important;
 }
 
-#tabs h2 ~ p:first-of-type {
+#tabs h2~p:first-of-type {
   display: block;
   margin-bottom: 50px;
 }
@@ -315,14 +326,14 @@ form {
   margin-bottom: 1rem;
 }
 
-#tabs h2 ~ p:first-of-type {
+#tabs h2~p:first-of-type {
   display: block;
   margin-bottom: 50px;
 }
 
 /*------------------ANIMATE-----------------------------*/
 
-#animatie ~ div.ui-accordion-content-active {
+#animatie~div.ui-accordion-content-active {
   background-color: #161616;
   margin: 0;
   padding: 0;
@@ -334,13 +345,13 @@ form {
   position: relative;
 }
 
-#animatie ~ div.ui-accordion-content-active * {
+#animatie~div.ui-accordion-content-active * {
   z-index: 1;
   width: 50%;
   text-align: center;
 }
 
-#animatie ~ div.ui-accordion-content-active img:first-of-type {
+#animatie~div.ui-accordion-content-active img:first-of-type {
   opacity: 0;
   width: 100%;
   position: absolute;
@@ -348,7 +359,7 @@ form {
   z-index: 0;
 }
 
-#animatie ~ div.ui-accordion-content-active img:last-of-type {
+#animatie~div.ui-accordion-content-active img:last-of-type {
   width: 50px;
   position: absolute;
   bottom: 20px;
